<resources>
    <string name="app_name">NutrionAll</string>
    <string name="botao_logar">Login</string>
    <string name="crie_conta">Crie uma conta</string>
    <string name="Label_Sexo">Sexo:</string>
    <string name="radio_masculino">Masculino</string>
    <string name="radio_feminino">Feminino</string>
    <string name="data_nascimento">Data de nascimento:</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_Conta">Sua conta</string>
    <string name="Buscar">Buscar</string>
    <string name="premium">Torne-se Premium</string>
    <string name="logout">Fazer logout</string>
    <string name="Refeicoes">Refeições</string>
    <string name="Refeicao_Classificacao">Classificação da Refeição:</string>
    <string name="Refeicao_Categoria">Categoria:</string>
    <string name="Refeicao_Avaliacoes">Média de avaliações:</string>
    <string name="Refeicao_Criador">Criador:</string>
    <string name="Refeicoes_melhores">Top 5 Refeições:</string>

    <string-array name="titles_tab">
        <item>Informações</item>
        <item>Descrição</item>
    </string-array>

    <string-array name="titles_tab_visualiza_refeicao">
        <item>Descrição</item>
        <item>Ingredientes</item>
        <item>Nutricionais</item>
    </string-array>

    <string name="title_activity_visualiza_refeicao">VisualizaRefeicaoActivity</string>
    <string name="Similares">Alimentos Similares:</string>
    <string name="Lista_Nutrientes">Lista de Nutrientes:</string>
    <string name="Mensagem_UserPremium">Disponíveis apenas para usuários Premium</string>
    <string name="Publico">Público</string>
    <string name="Salvar_Refeicao">Salvar Refeição</string>
    <string name="Texto_Descricao">Descreva sua refeição ;)</string>
    <string name="Alimento">Alimento</string>
    <string name="Porcao">Porção/Qtde.</string>
    <string name="Porção">Porção</string>
    <string name="Porcao_Ingrediente">Porção(g):</string>
    <string name="Quantidade">Quantidade:</string>
    <string name="Inserir_Ingrediente">Inserir ingrediente</string>
    <string name="Ingredientes">Ingredientes</string>
    <string name="Atualizar_Cadastro">Atualizar Cadastro</string>
</resources>
