<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_Conta" />
        <item
            android:id="@+id/nav_refeicoes"
            android:icon="@drawable/ic_description"
            android:title="@string/Refeicoes" />

    </group>

    <item android:title="Upgrades">
        <menu>
            <item
                android:id="@+id/nav_premium"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/premium" />
        </menu>
    </item>

</menu>
